--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "futuresLab-futures-trading",
+  "name": "tradex-futures-trading",
   "version": "0.1.0",
   "private": true,
   "scripts": {
